# product_dev_course

./: .gitignore  CLAUDE.md  INSTRUCTOR_NOTES.md  Makefile  QUICK-START-LOGGING.md  README-LOGGING.md  README.md  REVIEW.md  REVIEW_QUICK_FIXES.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  env.docker.example  env.production.example  package-lock.json
.claude/: settings.local.json
.claude/agents/: firmware-developer.md  test-and-commit.md
.github/workflows/: backend-tests.yml  deploy.yml
.qwen/: settings.json  settings.json.orig
backend-project/experiment-service/: README.md
backend-project/experiment-service/src/: config.py  middleware.py
backend/services/experiment-service/: .gitignore  Dockerfile  README.md  env.example  pyproject.toml
docker-entrypoint-initdb.d/: init-multiple-databases.sh
docs/: README.md  admin-initialization.md  auth-service-ts.md  bugs.md  code-style-guide.md  demo-flow.md  deployment-yandex-cloud.md  esp32s3-setup.md  experiment-service-roadmap.md  experiment-tracking-status-and-roadmap.md  experiment-tracking-ts.md  frontend-auth-ts.md  frontend-design-brief.md  frontend-rbac-scripts-requirements.md  grafana-trace-filtering.md  local-dev-docker-setup.md  local-dev-inventory.md  mobile-app-prd.md  mvp-acceptance-checklist.md  rbac-v2-design.md  script-execution-design.md  setup-guide.md  tasks-rbac-scripts.md  telemetry-rc-stm32.md  telemetry-storage-timescaledb.md
docs/RFC/: rfc-0001-config-service.md
docs/adr/: 002-timescaledb-telemetry.md  003-script-execution-service.md  006-metrics-service.md  008-asyncapi-specification.md  009-api-routing-service-prefix.md
frontend/apps/auth-proxy/: Dockerfile  env.example  package-lock.json  package.json
frontend/apps/experiment-portal/: package-lock.json
infrastructure/logging/: README.md  docker-compose.yml  promtail-config.yml
infrastructure/yandex-cloud/: cloud-init.yaml  compute.tf  database.tf  iam.tf  main.tf  network.tf  outputs.tf  registry.tf  terraform.tfvars.example  variables.tf
projects/backend/: AUTH_SERVICE_STATUS.md  BACKEND_MVP_STATUS.md  FRONTEND_BACKEND_COMPATIBILITY.md
projects/backend/common/: README.md  pyproject.toml
projects/backend/services/config-service/: Dockerfile  README.md  env.example  pyproject.toml
projects/backend/services/config-service/migrations/: 001_initial_schema.sql  002_seed_schemas.sql
projects/backend/services/config-service/src/config_service/: main.py  otel.py  prometheus_metrics.py  settings.py
projects/backend/services/config-service/src/config_service/api/: router.py
projects/backend/services/config-service/src/config_service/api/routes/: bulk.py  configs.py  health.py  schemas.py
projects/backend/services/config-service/src/config_service/core/: exceptions.py
projects/backend/services/config-service/src/config_service/domain/: dto.py  enums.py  models.py
projects/backend/services/config-service/src/config_service/repositories/: config_repo.py  history_repo.py  idempotency_repo.py  schema_repo.py
projects/backend/services/config-service/src/config_service/services/: audit_service.py  bulk_service.py  config_service.py  dependencies.py  idempotency.py  schema_service.py  validation_service.py
projects/backend/services/config-service/src/config_service/workers/: __init__.py
projects/backend/services/config-service/tests/: conftest.py  test_api_bulk.py  test_api_configs.py  test_api_rbac.py  test_api_rollback.py  test_api_schemas.py  test_api_sensitive.py  test_domain_models.py  test_dry_run.py  test_health.py  test_idempotency_integration.py  test_idempotency_service.py  test_optimistic_lock.py  test_paranoid_read.py  test_schema_compat.py  test_validation.py  utils.py
projects/backend/services/config-service/tests/pgsql_config/: postgresql.conf
projects/backend/services/config-service/tests/schemas/postgresql/: config_service.sql
projects/frontend/: MVP_STATUS.md
projects/rc_vehicle/: Makefile  README.md
projects/rc_vehicle/docs/: ai_schematic_tools.md  bom_ru.md  coding_style.md  ekf_calibration_reset.md  glossary_ru.md  improvement_ideas.md  indoor_test_checklist.md  interfaces_protocols.md  kids_mode_design.md  kids_mode_implementation_phase1.md  kids_mode_implementation_phase2.md  plan_steps_ru.md  refactoring-drive-modes.md  tasks.md  ts.md  wiring_diagram.drawio  wiring_diagram.md
projects/rc_vehicle/firmware/: .clang-format  CODE_REVIEW.md  Makefile  README.md  REFACTORING_PROPOSAL.md  STABILIZATION_CONFIG_IMPLEMENTATION.md  TESTING_PLAN.md  TESTING_TASKS.md  TODO_bugfixes.md
projects/rc_vehicle/firmware/esp32/main/: CMakeLists.txt  config.hpp  http_server.cpp  main.cpp  protocol.cpp  protocol.hpp  uart_bridge.cpp  uart_bridge.hpp  websocket_server.cpp  websocket_server.hpp  wifi_ap.cpp  wifi_ap.hpp
projects/rc_vehicle/firmware/rp2040/main/: CMakeLists.txt  config.hpp  failsafe.cpp  failsafe.hpp  imu.cpp  imu.hpp  main.cpp  protocol.cpp  protocol.hpp  pwm_control.cpp  pwm_control.hpp  rc_input.cpp  rc_input.hpp  spi_pico.cpp  spi_pico.hpp  uart_bridge.cpp  uart_bridge.hpp
projects/telemetry_cli/: README.md  TZ_RU.md  pyproject.toml
projects/telemetry_cli/configs/: example.esp32_ws.yaml  example.synthetic.yaml  example.udp_json.yaml
projects/telemetry_cli/src/telemetry_cli/: ci_client.py  ci_config.py  cli.py  config.py  etp_cli.py  models.py  runner.py  sink_experiment_service.py
projects/telemetry_cli/src/telemetry_cli/sources/: __init__.py  esp32_ws.py  synthetic.py  udp_json.py
projects/telemetry_cli/tests/: conftest.py  test_ci_commands.py  test_config.py  test_models.py  test_sink_experiment_service.py  test_synthetic.py  test_udp_json.py
scripts/: attach-esp32.ps1  deploy.sh  mvp_demo_check.sh  rollback.sh  setup-vm.sh
(+684 files in other folders)
